Fix right sidebar right margin on mobile. Fix broken about me link

--- a/assets/_sass/_sidebar.scss
+++ b/assets/_sass/_sidebar.scss
@@ -48,7 +48,9 @@
 .right-sidebar {
   grid-area: sidebar2;
   margin-top: 2rem;
-  margin-right: 1rem;
+  @include desktop {
+    margin-right: 1rem;
+  }
 
   .sidebar-title {
     font-size: large;
